--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <!-- Barre de navigation -->
             <ul>
-                <li><a href="connect.php">inscription php </a></li>
+                <li><a href="profile.html">voir mon profile</a></li>
             </ul>
         </nav>
     </header>
